--- a/client/src/components/login/login.css
+++ b/client/src/components/login/login.css
@@ -69,7 +69,7 @@ body {
   top: 10px;
   padding-left: 15px;
   /* margin-top: 50px; */
-  color: var(--color-2);
+  color: var(--color-1);
 }
 .form-input input:hover,
 .form-input span i:hover {
@@ -91,7 +91,7 @@ body {
 } */
 .form-box button {
   margin-top: 10px;
-  border: none;
+  border: 1px solid var(--main-color);
   cursor: pointer;
   border-radius: 50px;
   background-color: var(--main-color);
@@ -102,6 +102,8 @@ body {
   transition: all 0.5s ease;
   padding: 8px;
   box-shadow: var(--shadow-black-100);
+  width: 100%;
+  display: block;
 }
 .form-box button:hover {
   color: var(--main-color);
@@ -123,20 +125,25 @@ body {
 }
 .form-box .btn-social {
   color: var(--white-900);
-  border: none;
   font-weight: bold;
+  display: block;
 }
 .form-box .btn-facebook {
   background-color: var(--color-1);
   padding: 6px 0;
+  border: 1px solid var(--color-1);
 }
 .form-box .btn-google {
   background-color: #da3f34;
   padding: 6px 0;
+  border: 1px solid #da3f34;
+
 }
 .form-box .btn-twitter {
   background-color: #33ccff;
   padding: 6px 0;
+  border: 1px solid #33ccff;
+
 }
 .form-box .btn-facebook:hover {
   background-color: var(--white-800);
@@ -146,10 +153,10 @@ body {
 .form-box .btn-google:hover {
   background-color: var(--white-800);
   color: #da3f34;
-  border: 1px solid var(--main-color);
+  border: 1px solid #da3f34;
 }
 .form-box .btn-twitter:hover {
   background-color: var(--white-800);
   color: #33ccff;
-  border: 1px solid var(--main-color);
+  border: 1px solid #33ccff;
 }
